[package]
name = "day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
indoc = "1.0"
rustc-hash = "1.1.0"
nalgebra = "0.31"
arrayvec = "0.7"
itertools = "0.10"
gcd = "2.2.0"
priority-queue = "1.3.0"
